unpackaged/main/default/objects/zkfedex__ShipmateServicesSettings__c/fields/zkfedex__EnableDangerousGoodsAndHazMat__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EnableDangerousGoodsAndHazMat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This does not enable your FedEx account for Dangerous Goods or Hazardous Materials Shipping. This allows the Shipmate to display the options under special services. Please contact FedEx if you are unsure if your FedEx account is setup for this Shipping.</description>
    <inlineHelpText>This does not enable your FedEx account for Dangerous Goods or Hazardous Materials Shipping. This allows the Shipmate to display the options under special services. Please contact FedEx if you are unsure if your FedEx account is setup for this Shipping.</inlineHelpText>
    <label>Enable Dangerous Goods and HazMat</label>
    <type>Checkbox</type>
</CustomField>