unpackaged/main/default/objects/zkfedex__ShipmateServicesSettings__c/fields/zkfedex__EnablePriorityAlert__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EnablePriorityAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This does not enable your FedEx account to allow for Priority Alert. This allows the Shipmate to display the Priority Alert option under special services. Please contact FedEx if you are unsure if your FedEx account is setup for Priority Alert.</description>
    <inlineHelpText>This does not enable your FedEx account to allow for Priority Alert. This allows the Shipmate to display the Priority Alert option under special services. Please contact FedEx if you are unsure if your FedEx account is setup for Priority Alert.</inlineHelpText>
    <label>Enable Priority Alert</label>
    <type>Checkbox</type>
</CustomField>